header ready with no logo

--- a/index.html
+++ b/index.html
@@ -1,14 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="/web/20171018152543cs_/http://www.paz.co.il/css/reset.css" media="all" rel="stylesheet"
+        type="text/css" />
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="script.js"></script>
+    <title>PAZ</title>
 </head>
+
 <body>
-    <h1>Hello</h1>
-    <p>My name is Riva</p>
+    <header>
+        <div class="header">
+        <!-- The form -->
+        <form class="search-box" action="action_page.php">
+        <input type="text" placeholder="רשום מילת חיפוש" name="search">
+        <button type="submit"><i class="fa fa-search"></i></button>
+      </form>
+      <a class="logo" href="http://www.paz.co.il/"></a>
+    <nav id="mainMenu">
+        <ul>
+            <li class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">אודות</a>
+                <div class="dropdown-content">
+                    <a href="#">אודות</a>
+                    <a href="#">היסטוריה</a>
+                    <a href="#">חזון וערכים</a>
+                    <a href="#">מבנה הקבוצה</a>
+                    <a href="#">חברי דירקטוריון</a>
+                    <a href="#">הנהלת הקבוצה</a>
+                    <a href="#">פרסים והוקרות</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">חטיבות</a>
+                <div class="dropdown-content">
+                    <a href="#">אודות</a>
+                    <a href="#">היסטוריה</a>
+                    <a href="#">חזון וערכים</a>
+                    <a href="#">מבנה הקבוצה</a>
+                    <a href="#">חברי דירקטוריון</a>
+                    <a href="#">הנהלת הקבוצה</a>
+                    <a href="#">פרסים והוקרות</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">אחריות תאגידית</a>
+                <div class="dropdown-content">
+                    <a href="#">אודות</a>
+                    <a href="#">היסטוריה</a>
+                    <a href="#">חזון וערכים</a>
+                    <a href="#">מבנה הקבוצה</a>
+                    <a href="#">חברי דירקטוריון</a>
+                    <a href="#">הנהלת הקבוצה</a>
+                    <a href="#">פרסים והוקרות</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">קשרי משקיעים</a>
+                <div class="dropdown-content">
+                    <a href="#">אודות</a>
+                    <a href="#">היסטוריה</a>
+                    <a href="#">חזון וערכים</a>
+                    <a href="#">מבנה הקבוצה</a>
+                    <a href="#">חברי דירקטוריון</a>
+                    <a href="#">הנהלת הקבוצה</a>
+                    <a href="#">פרסים והוקרות</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">התחנות שלנו</a>
+                <div class="dropdown-content">
+                    <a href="#">אודות</a>
+                    <a href="#">היסטוריה</a>
+                    <a href="#">חזון וערכים</a>
+                    <a href="#">מבנה הקבוצה</a>
+                    <a href="#">חברי דירקטוריון</a>
+                    <a href="#">הנהלת הקבוצה</a>
+                    <a href="#">פרסים והוקרות</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">קריירה</a>
+                <div class="dropdown-content">
+                    <a href="#">אודות</a>
+                    <a href="#">היסטוריה</a>
+                    <a href="#">חזון וערכים</a>
+                    <a href="#">מבנה הקבוצה</a>
+                    <a href="#">חברי דירקטוריון</a>
+                    <a href="#">הנהלת הקבוצה</a>
+                    <a href="#">פרסים והוקרות</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">חדשות ומדיה</a>
+                <div class="dropdown-content">
+                    <a href="#">אודות</a>
+                    <a href="#">היסטוריה</a>
+                    <a href="#">חזון וערכים</a>
+                    <a href="#">מבנה הקבוצה</a>
+                    <a href="#">חברי דירקטוריון</a>
+                    <a href="#">הנהלת הקבוצה</a>
+                    <a href="#">פרסים והוקרות</a>
+                </div>
+            </li>
+            <ul>
+    </nav>
+</div>
+</header>
+
 </body>
+
 </html>
