header with no logo and flexbox nav

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 
 <body>
     <div id="container">
-
         <header>
             <div class="header">
                 <a class="logo" href="http://www.paz.co.il/"></a>
@@ -30,14 +29,15 @@
                 <div id="langmenu">
                     <ul>
                         <li>
-                            <a href="https://web.archive.org/web/20171018152543/http://www.paz.co.il/index.aspx?id=4424">English</a> 
+                            <a
+                                href="https://web.archive.org/web/20171018152543/http://www.paz.co.il/index.aspx?id=4424">English</a>
                         </li>
                     </ul>
                 </div>
                 <nav id="mainMenu">
                     <ul>
-                        <li id="home">
-                            <a href="https://web.archive.org/web/20171018152543/http://www.paz.co.il/" class="home selectednode"></a>
+                        <li>
+                            <a id="home" href="https://web.archive.org/web/20171018152543/http://www.paz.co.il/index.aspx"></a>
                         </li>
                         <li id="sep"></li>
                         <li class="dropdown">
@@ -130,21 +130,47 @@
                                 <a href="#">פרסים והוקרות</a>
                             </div>
                         </li>
-                        <ul>
+                    <ul>
                 </nav>
             </div>
         </header>
-    </div>
-    <div id="tob-box">
-            <div class="top-pic">
-                <img alt="קמעונאות ומסחר" src="images/images/1908364606615453350.JPG" class="w3-opacity-min">
+
+        <div id="tob-box">
+            <div class="top-wrap">
+                <img class="top-pic" alt="קמעונאות ומסחר" src="images/images/1908364606615453350.JPG">
                 <div class="text-top">
                     <h3>קמעונאות ומסחר</h3>
-                    <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה פועלת...<br></p>
+                    <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
+                        בחדשנות, יעילות ומובילות. החטיבה פועלת...<br></p>
                     <p><a href="index.aspx?id=4310" class="readMore white" target="_blank">
                             <span>קרא עוד</span>
                         </a></p>
                 </div>
+            </div>
+            <div class="top-wrap">
+                <img class="top-pic" alt="קמעונאות ומסחר" src="images/images/1908364606615453350.JPG">
+                <div class="text-top">
+                    <h3>קמעונאות ומסחר</h3>
+                    <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
+                        בחדשנות, יעילות ומובילות. החטיבה פועלת...<br></p>
+                    <p><a href="index.aspx?id=4310" class="readMore white" target="_blank">
+                            <span>קרא עוד</span>
+                        </a></p>
+                </div>
+            </div>
+            <div class="top-wrap">
+                <img class="top-pic" alt="קמעונאות ומסחר" src="images/images/1908364606615453350.JPG">
+                <div class="text-top">
+                    <h3>קמעונאות ומסחר</h3>
+                    <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
+                        בחדשנות, יעילות ומובילות. החטיבה פועלת...<br></p>
+                    <p><a href="index.aspx?id=4310" class="readMore white" target="_blank">
+                            <span>קרא עוד</span>
+                        </a></p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
