homepage with all DIV boxes not including the footer

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="/web/20171018152543cs_/http://www.paz.co.il/css/reset.css" media="all" rel="stylesheet"
-        type="text/css" />
     <link rel="stylesheet" href="reset-style.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -36,8 +34,9 @@
                 </div>
                 <nav id="mainMenu">
                     <ul>
-                        <li>
-                            <a id="home" href="https://web.archive.org/web/20171018152543/http://www.paz.co.il/index.aspx"></a>
+                        <li id="home">
+                            <a href="https://web.archive.org/web/20171018152543/http://www.paz.co.il/"
+                                class="home selectednode"></a>
                         </li>
                         <li id="sep"></li>
                         <li class="dropdown">
@@ -130,7 +129,7 @@
                                 <a href="#">פרסים והוקרות</a>
                             </div>
                         </li>
-                    <ul>
+                        <ul>
                 </nav>
             </div>
         </header>
@@ -138,39 +137,84 @@
         <div id="tob-box">
             <div class="top-wrap">
                 <img class="top-pic" alt="קמעונאות ומסחר" src="images/images/1908364606615453350.JPG">
-                <div class="text-top">
+                <div class="top-text">
                     <h3>קמעונאות ומסחר</h3>
                     <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
                         בחדשנות, יעילות ומובילות. החטיבה פועלת...<br></p>
-                    <p><a href="index.aspx?id=4310" class="readMore white" target="_blank">
-                            <span>קרא עוד</span>
+                    <p><a href="index.aspx?id=4310" class="readMore-white" target="_blank">
+                            <span> קרא עוד </span><img alt="קרא עוד" src="images/images/read_more_white.png">
                         </a></p>
                 </div>
             </div>
             <div class="top-wrap">
-                <img class="top-pic" alt="קמעונאות ומסחר" src="images/images/1908364606615453350.JPG">
-                <div class="text-top">
-                    <h3>קמעונאות ומסחר</h3>
-                    <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
-                        בחדשנות, יעילות ומובילות. החטיבה פועלת...<br></p>
-                    <p><a href="index.aspx?id=4310" class="readMore white" target="_blank">
-                            <span>קרא עוד</span>
+                <img class="top-pic" alt="זיקוק" src="images/images/046410251500.jpg">
+                <div class="top-text">
+                    <h3>זיקוק</h3>
+                    <p>פז זיקוק אשדוד (פז"א) היא חטיבת הזיקוק של קבוצת פז. החטיבה עוסקת בניהול פעילות בית הזיקוק באשדוד,
+                        הכוללת ייצור תזקיקי נפט...<br></p>
+                    <p><a href="index.aspx?id=4310" class="readMore-white" target="_blank"><span> קרא עוד </span><img
+                                alt="קרא עוד" src="images/images/read_more_white.png">
                         </a></p>
                 </div>
             </div>
             <div class="top-wrap">
-                <img class="top-pic" alt="קמעונאות ומסחר" src="images/images/1908364606615453350.JPG">
-                <div class="text-top">
-                    <h3>קמעונאות ומסחר</h3>
-                    <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
-                        בחדשנות, יעילות ומובילות. החטיבה פועלת...<br></p>
-                    <p><a href="index.aspx?id=4310" class="readMore white" target="_blank">
-                            <span>קרא עוד</span>
+                <img class="top-pic" alt="תעשיות ושירותים" src="images/images/291_354410564000.jpg">
+                <div class="top-text">
+                    <h3>תעשיות ושירותים</h3>
+                    <p>תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי
+                        לוואי של נפט, ומובילות את השוק...<br></p>
+                    <p><a href="index.aspx?id=4310" class="readMore-white" target="_blank">
+                            <span> קרא עוד </span><img alt="קרא עוד" src="images/images/read_more_white.png">
                         </a></p>
                 </div>
             </div>
         </div>
+        <div id="buttom-box">
+            <div class="buttom-wrap">
+                <h3>כרטיס אשראי שופרסל וכרטיס אשראי יש</h3>
+                <img src="/images/images/paz_250x110059890678.jpg" class="buttom-pic"
+                    alt="כרטיס אשראי שופרסל וכרטיס אשראי יש">
+                <a href="https://web.archive.org/web/20171018152543/http://www.paz.co.il/snifim/snifim.htm"
+                    class="readMore yellow" target="_blank">
+                    <span> קרא עוד </span><img alt="קרא עוד" src="images/images/read_more_yellow.png">
+                </a>
+            </div>
+        <div class="buttom-wrap">
+            <h2>yellow click&pick</h2>
+            <img src="/images//images/250X110668568400.jpg" class="buttom-pic"
+                alt="yellow click&pick">
+            <a href="https://web.archive.org/web/20171018152543/https://clickandpick.yellow.co.il/"
+                class="readMore yellow" target="_blank">
+                <span> קרא עוד </span><img alt="קרא עוד" src="images/images/read_more_yellow.png">
+            </a>
+        </div>
+        <div class="buttom-wrap">
+                <h2 id="buttom-box-header">התחנות שלנו בדרך שלך</h2><br>
+                <img src="/images//images/map-3058756287.jpg" class="buttom-map"
+                    alt="התחנות שלנו בדרך שלך">
+                <p></p><a href="https://web.archive.org/web/20171018152543/http://www.paz.co.il/index.aspx?id=4340&location=3"
+                    class="readMore yellow" target="_blank">
+                    <span> צפון </span><img alt="צפון" src="images/images/read_more_yellow.png">
+                </a></p>
+                <p><a href="https://web.archive.org/web/20171018152543/http://www.paz.co.il/index.aspx?id=4340&location=2"
+                    class="readMore yellow" target="_blank">
+                    <span> מרכז </span><img alt="מרכז" src="images/images/read_more_yellow.png">
+                </a></p>
+                <p><a href="https://web.archive.org/web/20171018152543/http://www.paz.co.il/index.aspx?id=4340&location=1"
+                    class="readMore yellow" target="_blank">
+                    <span> דרום </span><img alt="דרום" src="images/images/read_more_yellow.png">
+                </a></p>
+            </div>
+
     </div>
+
+    </div>
+    </div>
+
+
+
+
+
 </body>
 
 </html>
