trying to add border to nav

--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
                 <nav id="mainMenu">
                     <ul>
                         <li id="home">
-                            <a href="https://web.archive.org/web/20171018152543/http://www.paz.co.il/"
-                                class="home selectednode"></a>
+                            <a href="https://web.archive.org/web/20171018152543/http://www.paz.co.il/"></a>
                         </li>
-                        <li id="sep"></li>
                         <li class="dropdown">
                             <a href="javascript:void(0)" class="dropbtn">אודות</a>
                             <div class="dropdown-content">
@@ -51,7 +49,6 @@
                                 <a href="#">פרסים והוקרות</a>
                             </div>
                         </li>
-                        <li id="sep"></li>
                         <li class="dropdown">
                             <a href="javascript:void(0)" class="dropbtn">חטיבות</a>
                             <div class="dropdown-content">
@@ -64,7 +61,6 @@
                                 <a href="#">פרסים והוקרות</a>
                             </div>
                         </li>
-                        <li id="sep"></li>
                         <li class="dropdown">
                             <a href="javascript:void(0)" class="dropbtn">אחריות תאגידית</a>
                             <div class="dropdown-content">
@@ -77,7 +73,6 @@
                                 <a href="#">פרסים והוקרות</a>
                             </div>
                         </li>
-                        <li id="sep"></li>
                         <li class="dropdown">
                             <a href="javascript:void(0)" class="dropbtn">קשרי משקיעים</a>
                             <div class="dropdown-content">
@@ -90,7 +85,6 @@
                                 <a href="#">פרסים והוקרות</a>
                             </div>
                         </li>
-                        <li id="sep"></li>
                         <li class="dropdown">
                             <a href="javascript:void(0)" class="dropbtn">התחנות שלנו</a>
                             <div class="dropdown-content">
@@ -103,7 +97,6 @@
                                 <a href="#">פרסים והוקרות</a>
                             </div>
                         </li>
-                        <li id="sep"></li>
                         <li class="dropdown">
                             <a href="javascript:void(0)" class="dropbtn">קריירה</a>
                             <div class="dropdown-content">
@@ -116,7 +109,6 @@
                                 <a href="#">פרסים והוקרות</a>
                             </div>
                         </li>
-                        <li id="sep"></li>
                         <li class="dropdown">
                             <a href="javascript:void(0)" class="dropbtn">חדשות ומדיה</a>
                             <div class="dropdown-content">
